looking at overflow issues

--- a/docs/style.css
+++ b/docs/style.css
@@ -678,6 +678,7 @@ body.words {
 .wordContainer {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 .words.transparent {
