--- a/src/scss/elements/words.scss
+++ b/src/scss/elements/words.scss
@@ -17,6 +17,7 @@ body.words {
 .wordContainer{
     width:100vw;
     height:100vh;
+    overflow:hidden;
 }
 
 .words {
